# dispatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
prj/_common/: CMakeLists.txt
prj/_common/src/: dispatch_types.f90  extf.f90  hdf5_utils.f90  library_class.f90  tomlf_error_handler.f90
prj/delay/: CMakeLists.txt
prj/delay/src/: delay_library.f90
prj/dispatch/: CMakeLists.txt
prj/dispatch/src/: dispatch_interface.f90  dispatch_library_types.f90  dispatch_manager.f90
prj/iir_filters/: CMakeLists.txt
prj/iir_filters/src/: iir_filter.f90  iir_filter_library.f90  sos_class.f90  transfer_function_class.f90  zpk_class.f90
prj/iir_filters/test/: iir_filter_test.f90
prj/monitor/: CMakeLists.txt
prj/monitor/src/: monitor_library.f90
prj/n_ary_function/: CMakeLists.txt
prj/n_ary_function/src/: n_ary_function_library.f90
prj/rosco_controller/: CMakeLists.txt
prj/rosco_controller/src/: rosco_controller_library.f90
prj/scheduled_matrix_gain/: CMakeLists.txt
prj/scheduled_matrix_gain/src/: scheduled_matrix_gain_library.f90
prj/signal_generator/: CMakeLists.txt
prj/signal_generator/src/: signal_generator_library.f90
prj/signal_renamer/: CMakeLists.txt
prj/signal_renamer/src/: signal_renamer_library.f90
prj/soft_clipper/: CMakeLists.txt
prj/soft_clipper/src/: soft_clipper.f90
prj/state_estimator/: CMakeLists.txt
prj/state_estimator/src/: state_estimator_library.f90
prj/timing_rig/: CMakeLists.txt
prj/timing_rig/src/: timing_rig.f90
prj/variable_bandwidth_recursive_filter/: CMakeLists.txt
prj/variable_bandwidth_recursive_filter/design/: variable_bandwidth_recursive_filter_design.ipynb
prj/variable_bandwidth_recursive_filter/src/: sos_class.f90  variable_bandwidth_recursive_filter_library.f90
